[tool.poetry]
name = "ml-stack"
version = "0.1.0"
description = "ML Stack setup using flyte and mlflow"
authors = ["Clemens Kriechbaumer <clemens.kriechbaumer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mlflow = "^2.7.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.28.63"
prometheus-flask-exporter = "^0.22.4"
flytekit = "^1.10.0"
flytekitplugins-mlflow = "^1.10.0"

