[tool.poetry]
name = "mlstack"
version = "0.2.0"
description = "ML Stack setup using flyte and mlflow"
authors = ["Clemens Kriechbaumer <clemens.kriechbaumer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mlflow = "^2.9.2"
psycopg2-binary = "^2.9.9"
boto3 = "^1.28.63"
prometheus-flask-exporter = "^0.23.0"
flytekit = "^1.10.2"
flytekitplugins-mlflow = "1.10.1"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
black = "^23.11.0"

